--- a/main.html
+++ b/main.html
@@ -10,7 +10,35 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+		<div class="header">
+        <h1>Breaking News</h1>
+    </div>
+    <div class="contain">
+        <div class="latest-news-section">
+            <h3>Latest News Articles</h3>
+            <ul>
+                <li>Articles1</li>
+                <li>Articles2</li>
+                <li>Articles3</li>
+            </ul>
+        </div>
+        <div class="main">
+            <h3>Main Article</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis architecto eaque obcaecati, in eos
+                exercitationem voluptates earum recusandae modi facilis, veritatis, numquam accusantium! Sed veniam
+                officiis tempore, velit sequi amet doloribus facilis optio molestias voluptates rem et esse recusandae
+                delectus explicabo repellendus in id corporis itaque accusamus ducimus deserunt vitae.</p>
+        </div>
+        <div class="pictorial-news-section">
+            <h3>Pictorial News</h3>
+            <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg"
+                alt="image_one">
+            <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG"
+                alt="image_two">
+            <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG"
+                alt="image_three">
+        </div>
+    </div>
 </body>
 
 </html>
