--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<header>
 		<div class="header">
         <h1>Breaking News</h1>
     </div>
@@ -39,6 +40,7 @@
                 alt="image_three">
         </div>
     </div>
+ </header>
 </body>
 
 </html>
